crates/test-files/fixtures/compile_errors/ambiguous_traits.fe
trait DoThing {
  fn do(self);
}

trait DoOtherThing {
  fn do(self);
}


impl DoThing for u256 {
  fn do(self) {
  }
}

impl DoOtherThing for u256 {
  fn do(self) {
  }
}

contract Example {
  pub fn run_test(self) {
    1.do()
  }
}
